main.tf
terraform {
  backend "s3" {
    bucket = "secrets.tfstate-backend.com"
    key = "vpc/terraform.tfstate"
    region = "ap-southeast-1"
    dynamodb_table = "secrets-terraform-state-locks"  # Critical for locking
  }
}
provider "aws" {
  region = "ap-southeast-1"
}


data "aws_caller_identity" "current" {}
data "aws_region" "current" {}
data "aws_availability_zones" "available" { 
  state = "available"
}
# --- VPC & Networking ---
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support   = true   # Required for private DNS
  enable_dns_hostnames = true   # Required for private DNS
  tags = {
    Name = "${var.name_prefix}-vpc"
  }
}

resource "aws_subnet" "public" {
  count             = 2
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.${count.index}.0/24"
  #availability_zone = "us-east-1${count.index == 0 ? "a" : "b"}" 
  availability_zone = element(data.aws_availability_zones.available.names, count.index)
  # map_public_ip_on_launch = true  # 🔥 Critical for ECS tasks to get public IPs!
  tags = {
    Name = "${var.name_prefix}-public-subnet-${count.index}"
  }
}

resource "aws_subnet" "private" {
  count             = 2
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.${count.index + 2}.0/24"
  #availability_zone = "us-east-1${count.index == 0 ? "a" : "b"}"
  availability_zone = element(data.aws_availability_zones.available.names, count.index)
  tags = {
    Name = "${var.name_prefix}-private-subnet-${count.index}"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.main.id
  tags = {
    Name = "${var.name_prefix}-igw"
  }
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
  tags = {
    Name = "${var.name_prefix}-public-rt"
  }
}


resource "aws_route_table_association" "public" {
  count          = 2
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}
